--- a/submit.html
+++ b/submit.html
@@ -10,10 +10,10 @@
       }
       body {
         margin: 0px auto;
-        max-width: 800px;
+        max-width: 600px;
         padding: 20px;
-        border-top: 20px solid #333333;
         color: white;
+        overflow: hidden;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
       }
@@ -24,16 +24,24 @@
       a.link {
         color: inherit;
         text-decoration: none;
-        color: #999;
+        color: #aaa;
         border-bottom: 1px solid #555;
       }
       a.link:hover {
         border-bottom-color: transparent;
-        color: #ffffff;
+        color: #eeeeee;
       }
+      h1 {
+         
+      }
+      img {
+        width: 100%;
+        margin: 0px auto;
+      }  
     </style>
   </head>
   <body>
+    <img src="https://yt3.ggpht.com/g5YAQzmrs2HZp3UuaizxjhQhuGQMPl9ch_W4K3whTo-xfBsqHxtOoUBicmTq9znyJQbPRJ2MSQ=w2120-fcrop64=1,00005a57ffffa5a8-nd-c0xffffffff-rj-k-no">
     <h1>Submit Sunvox Song</h1>
     <div>
       To submit a song, either message <a class="link" href="https://soundcloud.com/stereofield2015">@stereofield2015</a> on SoundCloud or email <a href="mailto:stereofield2015@gmail.com" class="link">stereofield2015@gmail.com</a>.
