--- a/submit.html
+++ b/submit.html
@@ -9,33 +9,31 @@
         background: #333333;
       }
       body {
-        margin: 0px auto;
-        max-width: 600px;
-        padding: 20px;
         color: white;
         overflow: hidden;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
       }
       div {
-        line-height: 1.5;
-        margin-bottom: 20px;
+        line-height: 1.8;
+        margin: 0px auto;
+        max-width: 600px;
+        padding: 20px;
       }
       a.link {
         color: inherit;
-        text-decoration: none;
+        text-decoration: underline;
         color: #aaa;
-        border-bottom: 1px solid #555;
       }
       a.link:hover {
-        border-bottom-color: transparent;
+        text-decoration: none;
         color: #eeeeee;
       }
       h1 {
          
       }
       img {
-        width: 100%;
+        width: 100vw;
         margin: 0px auto;
       }  
     </style>
