--- a/submit.html
+++ b/submit.html
@@ -14,7 +14,7 @@
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
       }
-      div {
+      div, h1 {
         line-height: 1.8;
         margin: 0px auto;
         max-width: 600px;
