--- a/submit.html
+++ b/submit.html
@@ -10,6 +10,7 @@
       }
       body {
         color: white;
+        margin: 0px;
         overflow: hidden;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
