--- a/submit.html
+++ b/submit.html
@@ -34,8 +34,9 @@
          
       }
       img {
-        width: 100vw;
-        margin: 0px auto;
+        display: block;
+        height: 200px;
+        margin: auto;
       }  
     </style>
   </head>
