--- a/submit.html
+++ b/submit.html
@@ -35,7 +35,7 @@
       }
       img {
         display: block;
-        height: 200px;
+        width: 100vw;
         margin: auto;
       }  
     </style>
